--- a/style.css
+++ b/style.css
@@ -1,28 +1,1 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-
-}
-
-.empty {
-
-}
-
-.fill {
-
-  width: 150px;
-
-}
-
-.hold {
-  border: ;
-}
-
-.hovered {
-  : dashed;
-}
-
-@media (max-width: 800px) {
-}
+index
