--- a/dragAndDrop/dragAndDrop.style.css
+++ b/dragAndDrop/dragAndDrop.style.css
@@ -12,6 +12,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-color: black;
 }
 
 header {
